@@ -44,6 +44,12 @@ COM_PODCASTMANAGER_CONFIG_FIELD_PLAYERWIDTH_LABEL="Player Width"
 COM_PODCASTMANAGER_CONFIG_FIELD_TITLE_DEFAULT="My Podcast"
 COM_PODCASTMANAGER_CONFIG_FIELD_TITLE_DESCRIPTION="The title of the podcast."
 COM_PODCASTMANAGER_CONFIG_FIELD_TITLE_LABEL="Title"
+COM_PODCASTMANAGER_CONFIG_LIVEUPDATE_MINSTABILITY_DESCRIPTION="Select the minimum release stability level for which you will be notified that a new update is available. Please use RC and Stable only on mission critical sites. Help us test Akeeba Backup releases on live servers by installing alphas and betas."
+COM_PODCASTMANAGER_CONFIG_LIVEUPDATE_MINSTABILITY_LABEL="Minimum release stability for update notifications"
+COM_PODCASTMANAGER_CONFIG_LIVEUPDATE_STABILITY_ALPHA="Alpha"
+COM_PODCASTMANAGER_CONFIG_LIVEUPDATE_STABILITY_BETA="Beta"
+COM_PODCASTMANAGER_CONFIG_LIVEUPDATE_STABILITY_RC="Release Candidate"
+COM_PODCASTMANAGER_CONFIG_LIVEUPDATE_STABILITY_STABLE="Stable"
 COM_PODCASTMANAGER_DIRECTION_ASC_LABEL="Ascending"
 COM_PODCASTMANAGER_DIRECTION_DESC_LABEL="Descending"
 COM_PODCASTMANAGER_DIRECTION_DESCRIPTION="Sort in ascending (A-Z) or descending (Z-A) order, defaults to Descending."
